--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ classifiers = [
 ]
 dependencies = [
     "bm.integer-math",
-    "dtools.circular-array",
-    "dtools.fp"
+    "dtools.circular-array >= 3.9.1, < 3.10",
+    "dtools.fp >= 0.4.0, < 0.5"
 ]
 dynamic = ["version", "description"]
 keywords = [
