--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Typing :: Typed"
 ]
 dependencies = [
-    "bm.integer-math",
+    "bm.integer-math >= 0.5.1, < 0.6",
     "dtools.circular-array >= 3.9.1, < 3.10",
     "dtools.fp >= 0.4.0, < 0.5"
 ]
