--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,6 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Typing :: Typed",
 ]
-dependencies = [
-    "bm.integer-math >= 0.5.3, < 0.6",
-    "dtools.circular-array >= 3.12.0, < 3.13",
-    "dtools.fp >= 1.6.0, < 1.7",
-]
 dynamic = ["version", "description"]
 keywords = [
     "pythagorean",
@@ -29,9 +24,16 @@ keywords = [
     "math",
     "mathematics",
 ]
+dependencies = [
+    "bm.integer-math >= 0.5.3, < 0.6",
+    "dtools.circular-array >= 3.12.1, < 3.13",
+    "dtools.fp >= 1.7.0, < 1.8",
+]
 
 [project.optional-dependencies]
-tests = ["pytest >=8.3.5"]
+tests = [
+    "pytest >=8.3.5",
+]
 
 [project.scripts]
 pythag3 = "bm.pythagorean_triples.cli.pythag3:pythag3_cli"
