--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bm.pythagorean-triples"
-version = "0.6.0"
+version = "0.6.1"
 readme = "README.md"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
@@ -28,8 +28,8 @@ dependencies = [
 dynamic = ["description"]
 
 [project.urls]
-Changelog = "https://grscheller.github.io/bm-pythagorean-triples/html/changelog.html"
-Documentation = "https://grscheller.github.io/bm-pythagorean-triples/html/"
+Changelog = "https://github.com/grscheller/bm-pythagorean-triples/blob/main/CHANGELOG.md"
+Documentation = "https://grscheller.github.io/bm-docs/pythagorean-triples/"
 Homepage = "https://github.com/grscheller/bm-docs/blob/main/README.md"
 Source = "https://github.com/grscheller/bm-pythagorean-triples"
 
