--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
+[build-system]
+requires = ["flit_core>=3.4,<4"]
+build-backend = "flit_core.buildapi"
+
 [project]
-name = "bm.pythagorean-triples"
-version = "0.6.1"
+name = "boring-math-pythagorean-triples"
+version = "0.7.0"
 readme = "README.md"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
 authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
 keywords = [
-  "math",
   "mathematics",
   "pythagorean",
   "triples",
@@ -21,11 +24,16 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "bm.integer-math >= 0.6.0",
+  "bm.integer-math >= 0.8.0",
   "pythonic-fp.circulararray >= 5.3.0",
   "pythonic-fp.fptools >= 5.0.0",
 ]
 dynamic = ["description"]
+
+[project.optional-dependencies]
+test = [
+  "pytest>=8.4.1",
+]
 
 [project.urls]
 Changelog = "https://github.com/grscheller/bm-pythagorean-triples/blob/main/CHANGELOG.md"
@@ -36,12 +44,8 @@ Source = "https://github.com/grscheller/bm-pythagorean-triples"
 [project.scripts]
 pythag3 = "bm.pythagorean_triples.cli.pythag3:pythag3_cli"
 
-[build-system]
-requires = ["flit_core>=3.4,<4"]
-build-backend = "flit_core.buildapi"
-
-[tool.flit.sdist]
-exclude = ["dist", "tests", ".gitignore", ".mypy_cache", ".pytest_cache"]
+[tool.flit.module]
+name = "boring_math.integer_math"
 
 [tool.mypy]
 enable_incomplete_feature = ["NewGenericSyntax"]
@@ -59,12 +63,12 @@ report_progress = true
 
 [tool.pytest.ini_options]
 consider_namespace_packages = true
+testpaths = ["tests/"]
+addopts = "-ra"
 
 [tool.ruff]
 target-version = "py313"
-
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+ignore = ["E741"]
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
