--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,7 @@
-[build-system]
-requires = ["flit_core>=3.12,<4"]
-build-backend = "flit_core.buildapi"
-
 [project]
 name = "boring-math-pythagorean-triples"
-version = "0.7.0"
-readme = "README.md"
+version = "0.8.0"
+readme = "README.rst"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
 authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
@@ -24,16 +20,11 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "bm.integer-math >= 0.8.0",
-  "pythonic-fp.circulararray >= 5.3.0",
-  "pythonic-fp.fptools >= 5.0.0",
+  "bm.integer-math>=0.8.0",
+  "pythonic-fp.circulararray>=5.3.0",
+  "pythonic-fp.fptools>=5.0.0",
 ]
 dynamic = ["description"]
-
-[project.optional-dependencies]
-test = [
-  "pytest>=8.4.1",
-]
 
 [project.urls]
 Changelog = "https://github.com/grscheller/boring-math-pythagorean-triples/blob/main/CHANGELOG.md"
@@ -43,6 +34,15 @@ Source = "https://github.com/grscheller/boring-math-pythagorean-triples"
 
 [project.scripts]
 pythag3 = "bm.pythagorean_triples.cli.pythag3:pythag3_cli"
+
+[project.optional-dependencies]
+test = [
+  "pytest>=8.4.1",
+]
+
+[build-system]
+requires = ["flit_core>=3.12,<4"]
+build-backend = "flit_core.buildapi"
 
 [tool.flit.module]
 name = "boring_math.pythagorean_triples"
@@ -62,13 +62,12 @@ strict = true
 report_progress = true
 
 [tool.pytest.ini_options]
+addopts = "-ra"
 consider_namespace_packages = true
 testpaths = ["tests/"]
-addopts = "-ra"
 
 [tool.ruff]
 target-version = "py313"
-ignore = ["E741"]
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
