--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "boring-math-pythagorean-triples"
-version = "0.8.1"
+version = "0.8.2"
 readme = "README.rst"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
@@ -33,7 +33,7 @@ Homepage = "https://github.com/grscheller/boring-math/blob/main/README.md"
 Source = "https://github.com/grscheller/boring-math-pythagorean-triples"
 
 [project.scripts]
-pythag3 = "bm.pythagorean_triples.cli.pythag3:pythag3_cli"
+pythag3 = "boring_math.pythagorean_triples.cli.pythag3:pythag3_cli"
 
 [project.optional-dependencies]
 test = [
