Updated pyproject.toml to prepare to host Sphinx docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "boring-math-pythagorean-triples"
-version = "0.8.2"
+version = "0.9.0"
 readme = "README.rst"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 license = { file = "LICENSE" }
 authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
 keywords = [
@@ -20,16 +20,16 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "boring-math-integer-math>=0.8.0",
-  "pythonic-fp.circulararray>=5.3.0",
-  "pythonic-fp.fptools>=5.0.0",
+  "boring-math-integer-math>=1.1.0",
+  "pythonic-fp.circulararray>=5.3.2",
+  "pythonic-fp.fptools>=5.1.1",
 ]
 dynamic = ["description"]
 
 [project.urls]
-Changelog = "https://github.com/grscheller/boring-math-pythagorean-triples/blob/main/CHANGELOG.md"
-Documentation = "https://grscheller.github.io/boring-math/pythagorean-triples/development/build/html/releases.html"
-Homepage = "https://github.com/grscheller/boring-math/blob/main/README.md"
+Changelog = "https://github.com/grscheller/boring-math-pythagorean-triples/blob/main/CHANGELOG.rst"
+Documentation = "https://grscheller.github.io/boring-math/pythagorean-triples/development/build/html/"
+Homepage = "https://grscheller.github.io/boring-math/homepage/build/html/"
 Source = "https://github.com/grscheller/boring-math-pythagorean-triples"
 
 [project.scripts]
@@ -48,9 +48,11 @@ build-backend = "flit_core.buildapi"
 name = "boring_math.pythagorean_triples"
 
 [tool.mypy]
-enable_incomplete_feature = ["NewGenericSyntax"]
+enable_incomplete_feature = "NewGenericSyntax"
+explicit_package_bases = true
 implicit_reexport = false
 local_partial_types = true
+namespace_packages = true
 warn_redundant_casts = true
 warn_return_any = true
 warn_unused_configs = true
@@ -58,6 +60,7 @@ warn_unused_configs = true
 [tool.pylsp-mypy]
 enabled = true
 live-mode = true
+dmypy = false
 strict = true
 report_progress = true
 
@@ -71,6 +74,10 @@ target-version = "py313"
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["C901"]
+"**/*.py" = ["E741"]
 
 [tool.ruff.format]
 quote-style = "single"
